--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
+body {
+  background: rgb(121, 178, 188);
+  background: linear-gradient(180deg, rgb(208, 173, 191) 0%, rgb(66, 132, 183) 100%);
+
+  height: 100vh;
+}
 .App {
+  width: 500px;
+  height: 500px;
+  margin: 0 auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input,
+button {
+  font-size: 1.1rem;
+  text-align: center;
+  border: none;
+  box-shadow: 0 2px 5px rgba(51, 51, 51, 0.863);
+  letter-spacing: 2px;
+  font-weight: bold;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input {
+  margin: 1px;
+  padding: 15px 5px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+input:focus {
+  border: none;
+  outline: none;
+}
+button {
+  padding: 20px 30px;
+  margin-top: 20px;
+  cursor: pointer;
+  background: rgba(55, 50, 82, 1);
+  font-weight: bold;
+  color: rgb(209, 209, 209);
+}
+.heading {
+  opacity: 0.8;
+}
+.heading h1 {
+  margin-top: 50px;
+  text-align: center;
+  color: white;
+}
+.heading h2 {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+h3 {
+  color: rgb(250, 250, 250);
+  font-size: 1.7rem;
+  text-align: left;
+}
+h3 > span {
+  display: inline-block;
+  width: 200px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
